--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <section class="section">
         <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-light mynav">
                 <div class="container-fluid">
                     <a class="navbar-brand name" href="#">
                         <h1 class="titleName">Alistair Abao</h1>
@@ -81,7 +81,7 @@
             </div>
     </section>
     <section>
-        <div class="container-fluid cont1 jsCont">
+        <div class="container-fluid  cont1 jsCont">
             <div class="row secondRow">
                 <h1 class="aboutMe" id="aboutMe">About Me</h1>
                 <div class=" col-md-6 secondBody">
@@ -99,9 +99,9 @@
                         alt="">
                 </div>
                 <hr>
-                <div class="row secondRow">
+                <div class="row secondRow jsCont">
                     <div class="col-md-6 colSecond">
-                        <h1 class="aboutMe">Education</h1>
+                        <h1 class="aboutMe" id="educ">Education</h1>
                         <p class="abtTxt">I was a graduate and a registered nurse in the Philippines before coming to
                             Paris. Started
                             right
@@ -116,13 +116,13 @@
                             in an online full stack web development course by Studi, an online course provider. </p>
                     </div>
                     <div class="col-md-6 colSecond">
-                        <h1 class="aboutMe" id="skills">Skills</h1>
+                        <h1 class="aboutMe" is="skills" id="skills">Skills</h1>
                         <p class="abtTxt">HTML 5| CSS3 | JavaScript | Node.js | Express | Git | </p>
                     </div>
                 </div>
-                <div class="row secondRow">
+                <div class="row secondRow jsCont">
                     <div class="col colSecond">
-                        <h1 class="aboutMe">Tools</h1>
+                        <h1 class="aboutMe" id="tools">Tools</h1>
                         <p class="abtTxt">VSCode | Google Fonts | Font Awesome | Unsplash | Figma | npm | Bootstrap |
                             GitHub | Postman
                         </p>
@@ -138,8 +138,7 @@
                 <h1 class="aboutMe" style="color: white;" id="projects">Projects</h1>
                 <div class="col-md-6 colProj">
                     <div class="card" style=" width: 18rem;">
-                        <img src="D:\CODING\GithubRepositories\portfoliomk2\assets\piggamescreenshot.png"
-                            class="card-img-top projImg" alt="...">
+                        <img src="assets/piggamescreenshot.png" class="card-img-top projImg" alt="...">
                         <div class="card-body">
                             <p class="card-text">HTML | CSS | JavaScript</p>
                             <br>
@@ -157,8 +156,7 @@
                 </div>
                 <div class="col-md-6 colProj">
                     <div class="card" style=" width: 18rem;">
-                        <img src="D:\CODING\GithubRepositories\portfoliomk2\assets\reminderapp.png"
-                            class="card-img-top projImg" alt="...">
+                        <img src="assets/reminderapp.png" class="card-img-top projImg" alt="...">
                         <div class="card-body">
                             <p class="card-text">HTML | CSS | NODE.JS | EXPRESS</p> <br>
                             <p class="card-text">A simple reminder app that uses an array instead of a database. This
@@ -175,8 +173,7 @@
                 <div class="row">
                     <div class="col colProj">
                         <div class="card" style=" width: 18rem;">
-                            <img src="D:\CODING\GithubRepositories\portfoliomk2\assets\static site.png"
-                                class="card-img-top projImg" alt="...">
+                            <img src="assets/static site.png" class="card-img-top projImg" alt="...">
                             <div class="card-body">
                                 <p class="card-text">HTML | CSS | BOOTSTRAP</p> <br>
                                 <p class="card-text">One of the very first projects that I made as soon as I felt
@@ -197,24 +194,24 @@
         </div>
     </section>
     <section>
-        <div class="container-fluid jsCont">
+        <div class="container-fluid jsCont contactForm">
+            <h1 class="contact">Contact</h1>
             <form action="/web" class="form1">
-                <div class="formgrp row">
+                <div class="row">
                     <div class="col-md-6">
-                        <div class="row align-items-end">
-                            <div class="col-md-6 form-group form-control">
+                        <div class="row align-items-end form-control form-group">
+                            <div class="col-md-6 formfield">
                                 <span class="text-start mb-3 d-block asterisk">*<span class="text-start">Indicates
                                         required
                                         field</span></span>
-                                <label for="name" class="col-form-label form-group ">Name <span
-                                        class="asterisk">*</span></label>
-                                <input type="text" id="name" name="name" placeholder="Name" required"
+                                <label for="name" class="col-form-label">Name <span class="asterisk">*</span></label>
+                                <input type="text" id="name" name="name" placeholder="Name" required
                                     class="form-control">
                             </div>
 
                             <!-- This is lastname -->
 
-                            <div class="col-md-6 form-group form-control">
+                            <div class="col-md-6">
                                 <label for="lastname" class="col-form-label">Last Name <span
                                         class="asterisk">*</span></label>
                                 <input type="text" id="" name="lastname" placeholder="Last Name" required
@@ -224,23 +221,24 @@
                             <!-- This is email -->
 
                             <div class="col-md-6 mt-3">
-                                <label for="email" class="col-form-label">Email <span class="asterisk">*</span></label>
+                                <label for="email" class="col-form-label ">Email <span class="asterisk">*</span></label>
                                 <input type="email" id="email" name="email" placeholder="Email" class="form-control"
                                     required>
                             </div>
+                            <button class="btn btn-outline-secondary mt-3 btnsub">Submit</button>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <!-- This is textarea -->
                         <div class="row">
-                            <div class="col form-group form-control">
+                            <div class="col form-control">
                                 <label for="comment" class="col-form-label">Comments</label>
-                                <textarea name="comment" id="comment" cols="3" rows="5" class="form-control"
+                                <textarea name="comment" id="comment" cols="3" rows="12" class="form-control"
                                     required></textarea>
                             </div>
                         </div>
                     </div>
-                    <button type="" class="btn btn-outline-secondary mt-3 btnsub">Submit</button>
+
                 </div>
             </form>
         </div>
