style changes for mobile

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                                 alt="">
                         </div>
                         <div class="col-md-2">
-                            <img class="icon" src="https://pbs.twimg.com/media/FAMbpzgVQAAvRDj.png" alt="">
+                            <img class="icon"
+                                src="https://icon-library.com/images/bootstrap-icon-png/bootstrap-icon-png-11.jpg"
+                                alt="">
                         </div>
                         <div class="col-md-2">
-                            <img class="icon"
-                                src="https://ourcodeworld.com/public-media/articles/articleocw-57e57b89889ad.png"
-                                alt="">
+                            <img class="icon" src="https://www.mementotech.in/assets/images/icons/express.png" alt="">
                         </div>
                         <div class="col-md-2">
                             <img class="icon"
@@ -123,7 +123,8 @@
                 <div class="row secondRow jsCont">
                     <div class="col colSecond">
                         <h1 class="aboutMe" id="tools">Tools</h1>
-                        <p class="abtTxt">VSCode | Google Fonts | Font Awesome | Unsplash | Figma | npm | Bootstrap |
+                        <p class="abtTxt" id="tools">VSCode | Google Fonts | Font Awesome | Unsplash | Figma | npm |
+                            Bootstrap |
                             GitHub | Postman
                         </p>
                     </div>
