--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
                         a career in web development.</p>
                 </div>
                 <div class="col-md-6 picCont">
-                    <img class="myPic"
-                        src="https://images.unsplash.com/photo-1609602644879-dd158c2b56b4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1287&q=80"
-                        alt="">
+                    <img class="myPic" src="assets/mypic1.jpg" alt="">
                 </div>
                 <hr>
                 <div class="row secondRow jsCont">
@@ -139,7 +137,7 @@
                 <h1 class="aboutMe" style="color: white;" id="projects">Projects</h1>
                 <div class="col-md-6 colProj">
                     <div class="card" style=" width: 18rem;">
-                        <img src="assets/piggamescreenshot.png" class="card-img-top projImg" alt="...">
+                        <img src="assets/piggamescreenshot.png" class="card-img-top projImg" id="imgproj" alt="...">
                         <div class="card-body">
                             <p class="card-text">HTML | CSS | JavaScript</p>
                             <br>
@@ -157,7 +155,7 @@
                 </div>
                 <div class="col-md-6 colProj">
                     <div class="card" style=" width: 18rem;">
-                        <img src="assets/reminderapp.png" class="card-img-top projImg" alt="...">
+                        <img src="assets/reminderapp.png" class="card-img-top projImg" id="imgproj" alt="...">
                         <div class="card-body">
                             <p class="card-text">HTML | CSS | NODE.JS | EXPRESS</p> <br>
                             <p class="card-text">A simple reminder app that uses an array instead of a database. This
@@ -174,7 +172,7 @@
                 <div class="row">
                     <div class="col colProj">
                         <div class="card" style=" width: 18rem;">
-                            <img src="assets/static site.png" class="card-img-top projImg" alt="...">
+                            <img src="assets/static site.png" class="card-img-top projImg" id="imgproj" alt="...">
                             <div class="card-body">
                                 <p class="card-text">HTML | CSS | BOOTSTRAP</p> <br>
                                 <p class="card-text">One of the very first projects that I made as soon as I felt
