--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
                 <h1 class="aboutMe" id="aboutMe">About Me</h1>
                 <div class=" col-md-6 secondBody">
                     <p class="abtTxt">Hello,<br>
-                        I am Alistair and I am taking an online course in web development which
-                        started last June
-                        of 2022. I was a registered nurse in the Philippines before moving in Paris with my family. I
-                        worked in the restaurant industry for 8 years before deciding to pursue my interest in web
-                        development. I'm always looking for opportunities to improve my skills and to eventually pursue
-                        a career in web development.</p>
+                        I am Alistair and I am passionate about creating stuff, and creating a website is one of my
+                        goals.
+                        Because of my love for photography, I wanted to create my own website to host my images, thus
+                        started my interest in web development. I
+                        worked in the restaurant industry for 8 years before finally taking the chance to pursue
+                        the
+                        career
+                        change that I've been wanting to do.</p>
                 </div>
                 <div class="col-md-6 picCont">
                     <img class="myPic" src="assets/mypic1.jpg" alt="">
@@ -101,12 +103,8 @@
                     <div class="col-md-6 colSecond">
                         <h1 class="aboutMe" id="educ">Education</h1>
                         <p class="abtTxt">I was a graduate and a registered nurse in the Philippines before coming to
-                            Paris. Started
-                            right
-                            away working in the restaurant industry before finally taking the chance to pursue the
-                            career
-                            change that I've been wanting to do. I am always about improving my skills and adding new
-                            ideas to the current
+                            Paris. I am always about improving my skills and adding new
+                            skills to the current
                             skilset that I
                             have, be it in a classroom environment or teaching myself a new programing language. I am
                             currently
@@ -183,7 +181,6 @@
                                         class="btn btn-secondary">Demo</a></span>
                                 <span class="card-text"><a href="https://github.com/chubibobibo/tinigSite.git"
                                         class="btn btn-secondary">CODE</a></span>
-
                             </div>
                         </div>
                     </div>
@@ -195,9 +192,9 @@
     <section>
         <div class="container-fluid jsCont contactForm">
             <h1 class="contact">Contact</h1>
-            <form action="/web" class="form1">
+            <form action="/web">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 form1">
                         <div class="row align-items-end form-control form-group">
                             <div class="col-md-6 formfield">
                                 <span class="text-start mb-3 d-block asterisk">*<span class="text-start">Indicates
@@ -230,7 +227,7 @@
                     <div class="col-md-6">
                         <!-- This is textarea -->
                         <div class="row">
-                            <div class="col form-control">
+                            <div class="col form-control form2">
                                 <label for="comment" class="col-form-label">Comments</label>
                                 <textarea name="comment" id="comment" cols="3" rows="12" class="form-control"
                                     required></textarea>
