--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                         <p class="abtTxt">I was a graduate and a registered nurse in the Philippines before coming to
                             Paris. I am always about improving my skills and adding new
                             skills to the current
-                            skilset that I
-                            have, be it in a classroom environment or teaching myself a new programing language. I am
+                            skillset that I
+                            have, be it in a classroom environment or teaching myself a new programming language. I am
                             currently
                             enrolled
                             in an online full stack web development course by Studi, an online course provider. </p>
