--- a/index.html
+++ b/index.html
@@ -153,13 +153,12 @@
                 </div>
                 <div class="col-md-6 colProj">
                     <div class="card" style=" width: 18rem;">
-                        <img src="assets/reminderapp.png" class="card-img-top projImg" id="imgproj" alt="...">
+                        <img src="assets/catalog.png" class="card-img-top projImg" id="imgproj" alt="...">
                         <div class="card-body">
                             <p class="card-text">HTML | CSS | NODE.JS | EXPRESS</p> <br>
-                            <p class="card-text">A simple reminder app that uses an array instead of a database. This
-                                serves as a project to practice Express and I am currently learning MongoDb, which I
-                                plan
-                                to use in this app.</p><br>
+                            <p class="card-text">A simple catalog app that uses mongoDb as a database. This
+                                serves as a project to practice Express. It is currently in the process of redeploying,
+                                In the meantime you can check the code in Github.</p><br>
                             <span class="card-text"><a href="https://reminder-app-express.vercel.app/"
                                     class="btn btn-secondary">Demo</a></span>
                             <span class="card-text"><a href="https://github.com/chubibobibo/reminderAppExpress.git"
