--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
                     <div class="card" style=" width: 18rem;">
                         <img src="assets/catalog.png" class="card-img-top projImg" id="imgproj" alt="...">
                         <div class="card-body">
-                            <p class="card-text">HTML | CSS | NODE.JS | EXPRESS</p> <br>
+                            <p class="card-text">HTML | CSS | NODE.JS | EXPRESS | mongoDb</p> <br>
                             <p class="card-text">A simple catalog app that uses mongoDb as a database. This
                                 serves as a project to practice Express. It is currently in the process of redeploying,
                                 In the meantime you can check the code in Github.</p><br>
                             <span class="card-text"><a href="https://reminder-app-express.vercel.app/"
                                     class="btn btn-secondary">Demo</a></span>
-                            <span class="card-text"><a href="https://github.com/chubibobibo/reminderAppExpress.git"
+                            <span class="card-text"><a href="https://github.com/chubibobibo/video-game-catalog.git"
                                     class="btn btn-secondary">CODE</a></span>
                         </div>
                     </div>
