change one of the projects

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                             <p class="card-text">A simple catalog app that uses mongoDb as a database. This
                                 serves as a project to practice Express. It is currently in the process of redeploying,
                                 In the meantime you can check the code in Github.</p><br>
-                            <span class="card-text"><a href="https://reminder-app-express.vercel.app/"
+                            <span class="card-text"><a href="https://github.com/chubibobibo/photoApp"
                                     class="btn btn-secondary">Demo</a></span>
-                            <span class="card-text"><a href="https://github.com/chubibobibo/video-game-catalog.git"
+                            <span class="card-text"><a href="https://github.com/chubibobibo/photoApp"
                                     class="btn btn-secondary">CODE</a></span>
                         </div>
                     </div>
