--- a/index.html
+++ b/index.html
@@ -153,15 +153,17 @@
                 </div>
                 <div class="col-md-6 colProj">
                     <div class="card" style=" width: 18rem;">
-                        <img src="assets/catalog.png" class="card-img-top projImg" id="imgproj" alt="...">
+                        <img src="assets/photoapp.png" class="card-img-top projImg" id="imgproj" alt="...">
                         <div class="card-body">
                             <p class="card-text">HTML | CSS | NODE.JS | EXPRESS | mongoDb</p> <br>
-                            <p class="card-text">A simple catalog app that uses mongoDb as a database. This
-                                serves as a project to practice Express. It is currently in the process of redeploying,
-                                In the meantime you can check the code in Github.</p><br>
-                            <span class="card-text"><a href="https://github.com/chubibobibo/photoApp"
+                            <p class="card-text">An ongoing project made with express and mongoDb that will allow logged
+                                in users to upload their photos and let other users rate their photos and also view
+                                description and location where the photo was taken. I had street photographers in mind
+                                while I was thinking for a project, this will allow them to know about places which are
+                                not usually known/obscure to regular photographers</p><br>
+                            <span class="card-text"><a href="https://reminder-app-express.vercel.app/"
                                     class="btn btn-secondary">Demo</a></span>
-                            <span class="card-text"><a href="https://github.com/chubibobibo/photoApp"
+                            <span class="card-text"><a href="https://github.com/chubibobibo/video-game-catalog.git"
                                     class="btn btn-secondary">CODE</a></span>
                         </div>
                     </div>
