--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                                 description and location where the photo was taken. I had street photographers in mind
                                 while I was thinking for a project, this will allow them to know about places which are
                                 not usually known/obscure to regular photographers</p><br>
-                            <span class="card-text"><a href="https://reminder-app-express.vercel.app/"
+                            <span class="card-text"><a href="https://github.com/chubibobibo/photoApp"
                                     class="btn btn-secondary">Demo</a></span>
-                            <span class="card-text"><a href="https://github.com/chubibobibo/video-game-catalog.git"
+                            <span class="card-text"><a href="https://github.com/chubibobibo/photoApp"
                                     class="btn btn-secondary">CODE</a></span>
                         </div>
                     </div>
