--- a/index.html
+++ b/index.html
@@ -222,30 +222,25 @@
                                 <input type="email" id="email" name="email" placeholder="Email" class="form-control"
                                     required>
                             </div>
-                            <button class="btn btn-outline-secondary mt-3 btnsub">Submit</button>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <!-- This is textarea -->
                         <div class="row">
-                            <div class="col form-control form2">
+                            <div class="col form2">
                                 <label for="comment" class="col-form-label">Comments</label>
                                 <textarea name="comment" id="comment" cols="3" rows="12" class="form-control"
                                     required></textarea>
                             </div>
                         </div>
                     </div>
-
+                    <button class="btn btn-outline-secondary mt-3 btnsub">Submit</button>
                 </div>
             </form>
         </div>
 
         </div>
     </section>
-
-
-
-
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
         </script>
