--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             </div>
                         </div>
                     </div>
-                    <button class="btn btn-outline-secondary mt-3 btnsub">Submit</button>
+                    <button class="btn btn-secondary mt-3 btnsub ml-3">Submit</button>
                 </div>
             </form>
         </div>
