--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="col-md-6 colSecond">
                         <h1 class="aboutMe" is="skills" id="skills">Skills</h1>
-                        <p class="abtTxt">HTML 5| CSS3 | JavaScript | Node.js | Express | Git | </p>
+                        <p class="abtTxt">HTML 5| CSS3 | JavaScript | Node.js | Express | Git | MongoDB |</p>
                     </div>
                 </div>
                 <div class="row secondRow jsCont">
